welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:3: error: not found: value ==
 	case (a+b == 10,a+c==10,b+c==10) => 10
                  ^blueTicket:3: error: not found: value +
 	case (a+b == 10,a+c==10,b+c==10) => 10
               ^blueTicket:3: error: not found: value ==
 	case (a+b == 10,a+c==10,b+c==10) => 10
                           ^blueTicket:3: error: not found: value +
 	case (a+b == 10,a+c==10,b+c==10) => 10
                         ^blueTicket:3: error: a is already defined as value a
 	case (a+b == 10,a+c==10,b+c==10) => 10
                        ^blueTicket:3: error: not found: value ==
 	case (a+b == 10,a+c==10,b+c==10) => 10
                                   ^blueTicket:3: error: not found: value +
 	case (a+b == 10,a+c==10,b+c==10) => 10
                                 ^blueTicket:3: error: b is already defined as value b
 	case (a+b == 10,a+c==10,b+c==10) => 10
                                ^blueTicket:3: error: c is already defined as value c
 	case (a+b == 10,a+c==10,b+c==10) => 10
                                  ^blueTicket:4: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: (Int, Int, Int)
 	case (b-c==10,a-c==10) => 5
             ^blueTicket:4: error: not found: value ==
 	case (b-c==10,a-c==10) => 5
                 ^blueTicket:4: error: not found: value -
 	case (b-c==10,a-c==10) => 5
               ^blueTicket:4: error: not found: value ==
 	case (b-c==10,a-c==10) => 5
                         ^blueTicket:4: error: not found: value -
 	case (b-c==10,a-c==10) => 5
                       ^blueTicket:4: error: c is already defined as value c
 	case (b-c==10,a-c==10) => 5
                        ^